--- a/AppProduct.Shared.Blazor/Pages/Index.razor
+++ b/AppProduct.Shared.Blazor/Pages/Index.razor
@@ -83,6 +83,21 @@
                                 <MudCard Class="mud-elevation-2 rounded-lg" Style="height: 100%;">
                                     <MudCardContent Class="pa-4">
                                         <MudStack AlignItems="AlignItems.Center" Spacing="2">
+                                            <MudIcon Icon="@Icons.Material.Filled.Build" Size="Size.Large" Color="Color.Success" />
+                                            <MudText Typo="Typo.subtitle1" Align="Align.Center">Service Catalog</MudText>
+                                            <MudText Typo="Typo.body2" Align="Align.Center">Browse and book professional services</MudText>
+                                        </MudStack>
+                                    </MudCardContent>
+                                    <MudCardActions Class="justify-center">
+                                        <MudButton Href="/services" Color="Color.Success" Variant="Variant.Filled">View Services</MudButton>
+                                    </MudCardActions>
+                                </MudCard>
+                            </MudItem>
+                            
+                            <MudItem xs="12" sm="6" md="4">
+                                <MudCard Class="mud-elevation-2 rounded-lg" Style="height: 100%;">
+                                    <MudCardContent Class="pa-4">
+                                        <MudStack AlignItems="AlignItems.Center" Spacing="2">
                                             <MudIcon Icon="@Icons.Material.Filled.Chat" Size="Size.Large" Color="Color.Info" />
                                             <MudText Typo="Typo.subtitle1" Align="Align.Center">AI Product Chat</MudText>
                                             <MudText Typo="Typo.body2" Align="Align.Center">Get intelligent insights about your products</MudText>
